# TweetEval-Revisited

./: .gitignore  Makefile  pyproject.toml  train.tracking.json
experiments/: _config.py  finetuned_head.py  prompt_baseline.py
src/tweeteval_revisited/: __init__.py  __main__.py
src/tweeteval_revisited/neural/: __init__.py  classifier.py  encoder.py  generator.py  util.py
src/tweeteval_revisited/pipeline/: __init__.py  tracker.py  tracking.py  util.py
